# uav-mission-control

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mission_controller.yaml
docs/: rknn_duplicate_boxes_fix.md  行知训练营答辩.pptx
include/electronic_fly/: competition_points.h  detection_deduplicator.h  detection_processor.h  detection_types.h  fly_points.h  grid_detection_filter.h  grid_projection_filter.h  grid_utils.h  json_utils.h  vision_servo_controller.h
include/electronic_fly/trajectory_optimizer/: trajectory_optimizer.h
launch/: Competition.launch  Mission_controller.launch  Mission_controller_rknn_image.launch  Path_planning_test.launch
scripts/: analyze_vision_servo_bag.py  analyze_vision_servo_fft.py  animal_detector_rknn.py  bag_to_images.py  camera_calibration.py  color_block_detector.py  convert_onnx_to_rknn.py  prepare_yolo_dataset.py  rknn_folder_infer.py
src/: animal_detector.cpp  detection_deduplicator.cpp  detection_processor.cpp  grid_detection_filter.cpp  grid_projection_filter_demo.cpp  mission_controller.cpp  path_planning.cpp  vision_servo_controller.cpp
src/trajectory_optimizer/: trajectory_optimizer.cpp
